--- a/control.htm
+++ b/control.htm
@@ -28,7 +28,7 @@
           display:flex;
           justify-content:center;
           padding:18px;
-          background: url('/img/control.png') no-repeat center center fixed;
+          background: url('https://carlosluque-uned.github.io/test_cluque/img/control.png') no-repeat center center fixed;
           background-size: cover;
           backdrop-filter: blur(3px);
       }
@@ -684,3 +684,4 @@ console.log(descifrarCodigo(eventos)); // debe imprimir: 12`,
 </script>
 </body>
 </html>
+
