--- a/parking.htm
+++ b/parking.htm
@@ -28,7 +28,7 @@
           display:flex;
           justify-content:center;
           padding:18px;
-          background: url('/img/parking.png') no-repeat center center fixed;
+          background: url('https://carlosluque-uned.github.io/test_cluque/img/parking.png') no-repeat center center fixed;
           background-size: cover;
           backdrop-filter: blur(3px);
       }
@@ -748,6 +748,7 @@ function calcularTotal(vehiculos) {
 // Prueba final (debe imprimir 45):
 const lista = [new Coche(10), new Moto(10), new Camion(5)];
 console.log(calcularTotal(lista));
+
 
 
 -->
