--- a/server.htm
+++ b/server.htm
@@ -28,7 +28,7 @@
           display:flex;
           justify-content:center;
           padding:18px;
-          background: url('/img/server.png') no-repeat center center fixed;
+          background: url('https://carlosluque-uned.github.io/test_cluque/img/server.png') no-repeat center center fixed;
           background-size: cover;
           backdrop-filter: blur(3px);
       }
@@ -676,3 +676,4 @@ Prueba final (tu código debe hacerlo y debe imprimir 39):
 </script>
 </body>
 </html>
+
